[gd_scene load_steps=5 format=3 uid="uid://b1kexr2o1imx1"]

[ext_resource type="Script" uid="uid://bg6i32c2nobfy" path="res://scenes/dev/ZXue/LaserShroom/Scripts/LaserShroom.gd" id="1_248i0"]
[ext_resource type="Script" uid="uid://bnkh1v32ck0hm" path="res://scenes/dev/ZXue/LaserShroom/Scenes/SM_LaserShroom.gd" id="2_e3eln"]

[sub_resource type="SphereShape3D" id="SphereShape3D_248i0"]

[sub_resource type="SphereMesh" id="SphereMesh_e3eln"]

[node name="LaserShroom" type="CharacterBody3D"]
script = ExtResource("1_248i0")
metadata/_custom_type_script = "uid://bg6i32c2nobfy"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_248i0")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_e3eln")

[node name="SM_LaserShroom" type="Node" parent="."]
script = ExtResource("2_e3eln")
dict_allStates = null
stateScenes = null
currentStateName = null
defaultStateIndex = null
metadata/_custom_type_script = "uid://eptderwl71r"

[node name="IdleMoveAroundTimer" type="Timer" parent="."]

[connection signal="timeout" from="IdleMoveAroundTimer" to="." method="_on_idle_move_around_timer_timeout"]
